# repo-visualizer

./: .gitignore  HISTORY_TESTING.md  PR_NOTES.md  README.md  ROADMAP.md  index.html  pyproject.toml  setup.py  start_project.sh  start_project_with_api.sh  test_history.json  test_history_data.json  test_repo_data.json
.github/workflows/: frontend-checks.yml  python-checks.yml
.mentat/: README.md  precommit.sh  setup.sh
.mentat/preview/: backend.sh  server.sh
backend/: package-lock.json  package.json  server.js
docs/: SCHEMA.md
frontend/: .eslintrc.json  .prettierignore  README.md  index.html  jest.config.cjs  package-lock.json  package.json  tsconfig.jest.json  vite.config.ts  vitest.config.ts
frontend/coverage/: coverage-final.json  index.html
frontend/coverage/src/: App.tsx.html  index.html
frontend/coverage/src/components/: Controls.tsx.html  FileDetails.tsx.html  FileUpload.tsx.html  index.html
frontend/coverage/src/components/Visualization/: RepositoryGraph.tsx.html  index.html  index.ts.html
frontend/coverage/src/utils/: exampleData.ts.html  index.html
frontend/src/: App.tsx  index.css  index.ts
frontend/src/__tests__/: FileUpload.test.tsx  exampleData.test.ts  simple.test.js  simple.test.ts  sum.test.js  test-imports.test.tsx
frontend/src/__tests__/components/: Controls.test.tsx  FileUpload.test.tsx
frontend/src/components/: App.test.tsx  Controls.test.tsx  Controls.tsx  DataSourceWeights.tsx  DraggableControls.tsx  DynamicLegend.tsx  EdgeControls.tsx  FileDetails.test.tsx  FileDetails.tsx  FileUpload.test.tsx  FileUpload.tsx  FloatingHistoryControls.tsx  FloatingMenu.tsx  FloatingNodeSizing.tsx  FloatingSearch.tsx  HistoryControls.tsx  HistoryVisualization.tsx  MenuDropdown.tsx  NodeControls.tsx  TimelineControls.tsx  UnifiedVisualizationControls.tsx
frontend/src/components/Visualization/: README.md  RepositoryGraph.helpers.test.tsx  RepositoryGraph.helpers.ts  RepositoryGraph.simple.test.tsx  RepositoryGraph.tsx  index.ts
frontend/src/hooks/: useDraggable.ts
frontend/src/test/: mockData.ts  setup.ts
frontend/src/types/: schema.ts  visualization.test.ts  visualization.ts
frontend/src/utils/: apiClient.ts  exampleData.ts  extensionColors.ts  search.ts  visualizationUtils.ts
src/repo_visualizer/: __init__.py  __main__.py  analyzer.py  cli.py  example.py  github_client.py  schema.py
temp-frontend/: package.json
tests/: test_analyzer.py  test_analyzer_extended.py  test_cli.py  test_example_extended.py  test_gitignore.py  test_hello_world.py  test_relationships.py  test_schema.py
